--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login",
+  "name": "exact-login",
   "homepage": "http://gitname.github.io/exact-login",
   "version": "0.1.0",
   "private": true,
